# sc2-techtree

./: .gitignore  Pipfile  README.md  pyproject.toml  run.py
.github/workflows/: pythonactions.yml
data/: data.json  data_readable.json
generate/: collect.py  patch.py
generate/patches/: ability_produces_missing.toml  ability_produces_replace.toml  ability_requirement.toml  unit_ability_disallowed.toml  unit_ability_missing.toml
