[tool.poetry]
name = "sc2-techtree"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7 <3.11"
burnysc2 = "^5.0.11"
toml = "^0.10.2"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
